ghc-4335c07/testsuite/tests/rename/should_compile/T3449A.hs

module T3449A where

import {-# SOURCE #-} T3449

z :: Foo a => a
z = f1

aChar :: Char
aChar = 'a'
