ghc-4335c07/testsuite/tests/rename/should_fail/rnfail054.hs
-- Test for trac #2141

module Foo where

foo :: () -> ()
foo x = x { foo = 1 }
